# food_advisor_api

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  debug.sh  docker-compose.yml
docker/: entrypoint.sh
docker/mysql/: custom.cnf
docker/mysql/init/: 01-create-database.sql  02-create-tables.sql  03-indexes.sql  04-1-helper-procedures.sql  04-2-user-procedures.sql  04-3-ingredient-procedures.sql  04-4-recipe-procedures.sql  04-6-user-preferences-procedures.sql  04-7-ingredient-categories-procedures.sql  04-procedures.sql  04-views.sql  05-2-user-procedures.sql  05-3-ingredient-procedures.sql  05-4-recipe-procedures.sql  05-5-stock-procedures.sql  05-initial-data.sql  05-procedures.sql  06-recipe-examples.sql  06-triggers.sql  (+2 more)
docker/scripts/: wait-for-mysql.sh
src/: auth.rs  handlers.rs  main.rs  middlewares.rs  models.rs  repositories.rs  utils.rs
src/handlers/: admin_handler.rs  image_handler.rs  ingredient_categories_handler.rs  ingredient_handler.rs  recipe_handler.rs  user_handler.rs  user_preferences_handler.rs
src/middlewares/: admin_only_middleware.rs
src/models/: allergy_models.rs  audit_models.rs  image_models.rs  ingredient_categories_models.rs  ingredient_models.rs  pagination_models.rs  recipe_models.rs  user_models.rs  user_preferences_models.rs
src/repositories/: admin_repository.rs  image_repository.rs  ingredient_categories_repository.rs  ingredient_repository.rs  recipe_repository.rs  user_preferences_repository.rs  user_repository.rs
src/repository/: admin_repository.rs  mod.rs  user_repository.rs
src/utils/: auth.rs
